--- a/index.html
+++ b/index.html
@@ -17,23 +17,36 @@
 			<section class="am">About Me</section>
 				<p class="hard">Creative Shy Mind...</p>
 					<div class="projects">
-						<ul>
-							<li>SamplerDj</li>
-							<div class="picsampler" ></div>
-							<a target="_blank" href="http://www.samplerdj.com/">SamplerDJ </a>&nbsp;
-							<a target="_blank" href="https://github.com/shinedark/samplerdj">SamplerDJ Code</a>
-								<div class="textl">Fun  jQuery audio sampler triggered by keyboard. Sound provided by spotify 30s previews. Includes audio effects. </div>
-							<li>Alog</li>
-							<div class="picalog" ></div>
-							<a target="_blank" href="https://serene-peak-18414.herokuapp.com/">Alog </a>&nbsp;
-							<a target="_blank" href="https://github.com/shinedark/alog">Alog Code</a>
-								<div class="textl">Full Stack log App to improve communications with your doctor/therapist.</div>
-							<li>Visualizer</li>
-							<div class="picsvisualizer" ></div>
-							<a target="_blank" href="https://shinedark.github.io/shinedarkmusic/">Visualizer </a>&nbsp;
-							<a target="_blank" href="https://github.com/shinedark/sdm">Visualizer Code</a>
-								<div class="textl">Full Stack React App. It's meant to be used by Vj's at dj shows. Css heavy.</div>
-						</ul>
+						<div class="what">
+							<div class="box1">Projects </div>
+							<div class="box2">What I Do </div>
+							<div class="box3">Contact </div>	
+						</div>
+						<div class="container">	
+							<ul class="ca">
+								<li class="sam">SamplerDj
+								<div class="picsampler" ></div>
+								<a target="_blank" href="http://www.samplerdj.com/">SamplerDJ </a>&nbsp;
+								<a target="_blank" href="https://github.com/shinedark/samplerdj">SamplerDJ Code</a>
+									<div class="textl">Fun  jQuery audio sampler triggered by keyboard. Sound provided by spotify 30s previews. Includes audio effects. </div>
+								</li>
+								<li class="al">Alog
+								<div class="picalog" ></div>
+								<a target="_blank" href="https://serene-peak-18414.herokuapp.com/">Alog </a>&nbsp;
+								<a target="_blank" href="https://github.com/shinedark/alog">Alog Code</a>
+									<div class="textl">Full Stack log App to improve communications with your doctor/therapist.</div>
+								</li>
+								<li class="vi">Visualizer
+								<div class="picsvisualizer" ></div>
+								<a target="_blank" href="https://shinedark.github.io/shinedarkmusic/">Visualizer </a>&nbsp;
+								<a target="_blank" href="https://github.com/shinedark/sdm">Visualizer Code</a>
+									<div class="textl">Full Stack React App. It's meant to be used by Vj's at dj shows. Css heavy.</div>
+								</li>
+							</ul>
+							<div class="ido"></div>
+							<div class="cont">mide0303@gmail.com</div>
+						</div>	
+					</div>
 						    <footer class="footer">
 						    	<ul class="icons">
 						    		<li class="twitter">
@@ -47,8 +60,10 @@
 						    		</li>
 						        </ul>
 						    </footer>
-					</div>
-	</div>	
+					
+	</div>
+<script src="//code.jquery.com/jquery.min.js"></script>
+<script src="js/app.js"></script>		
 </body>
 </html>
 
