--- a/index.html
+++ b/index.html
@@ -41,7 +41,7 @@
 								<div class="picsvisualizer" ></div>
 								<a target="_blank" href="https://shinedark.github.io/shinedarkmusic/">Visualizer </a>&nbsp;
 								<a target="_blank" href="https://github.com/shinedark/sdm">Visualizer Code</a>
-									<div class="textl">Full Stack React App. It's meant to be used by Vj's at dj shows. Css heavy.</div>
+									<div class="textl">React App. It's meant to be used by Vj's at dj shows. Css heavy.</div>
 								</li>
 							</ul>
 							<div class="ido"></div>
