--- a/index.html
+++ b/index.html
@@ -6,13 +6,14 @@
 	<link rel="stylesheet" type="text/css" href="https://maxcdn.bootstrapcdn.com/font-awesome/4.7.0/css/font-awesome.min.css">
 	<link href="https://fonts.googleapis.com/css?family=Bungee" rel="stylesheet">
 	<link href="https://fonts.googleapis.com/css?family=Monoton" rel="stylesheet">
+	<link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/animate.css/3.5.2/animate.min.css">
 	<link rel="stylesheet" href="css/styles.css" />
 		<title>Camilo Pineda</title>
 </head>
 <body>
-	<div class="App">
+	<div>
 		<div class="App-header">
-		<h1>Camilo Pineda</h1>
+		<h1 class="h1">Camilo Pineda</h1>
 		</div>
 		
 			<section class="am">About Me</section>
