--- a/index.html
+++ b/index.html
@@ -13,7 +13,22 @@
 <body>
 	<div>
 		<div class="App-header">
-		<h1 class="h1">Camilo Pineda</h1>
+		<h1 class="h1">
+			<ul class="h">
+				<li class="ho">C</li>
+				<li class="ho">a</li>
+				<li class="ho">m</li>
+				<li class="ho">i</li>
+				<li class="ho">l</li>
+				<li class="ho">o</li>
+				<span class="ho"></span>
+				<li class="hi">P</li>
+				<li class="hi">i</li>
+				<li class="hi">n</li>
+				<li class="hi">d</li>
+				<li class="hi">a</li>
+
+		</h1>
 		</div>
 		
 			<section class="am">About Me</section>
