--- a/index.html
+++ b/index.html
@@ -25,6 +25,7 @@
 				<li class="hi">P</li>
 				<li class="hi">i</li>
 				<li class="hi">n</li>
+				<li class="hi">e</li>
 				<li class="hi">d</li>
 				<li class="hi">a</li>
 
