--- a/index.html
+++ b/index.html
@@ -12,25 +12,25 @@
 </head>
 <body>
 	<div>
-		<div class="App-header">
+		<header class="App-header">
 		<h1 class="h1">
 			<ul class="h">
-				<li class="ho">C</li>
-				<li class="ho">a</li>
-				<li class="ho">m</li>
-				<li class="ho">i</li>
-				<li class="ho">l</li>
-				<li class="ho">o</li>
-				<span class="ho"></span>
-				<li class="hi">P</li>
-				<li class="hi">i</li>
-				<li class="hi">n</li>
-				<li class="hi">e</li>
-				<li class="hi">d</li>
-				<li class="hi">a</li>
+				<span class="ho">C</span>
+				<span class="ho">a</span>
+				<span class="ho">m</span>
+				<span class="ho">i</span>
+				<span class="ho">l</span>
+				<span class="ho">o</span>
+				<span class="hu"></span>
+				<span class="hi">P</span>
+				<span class="hi">i</span>
+				<span class="hi">n</span>
+				<span class="hi">e</span>
+				<span class="hi">d</span>
+				<span class="hi">a</span>
 
 		</h1>
-		</div>
+		</header>
 		
 			<section class="am">About Me</section>
 				<p class="hard">Creative Shy Mind...</p>
