--- a/index.html
+++ b/index.html
@@ -70,8 +70,8 @@
 								</li>
 								<li class="vi">Visualizer
 								<div class="picsvisualizer" ></div>
-								<a target="_blank" href="https://shinedark.github.io/shinedarkmusic/">Visualizer </a>&nbsp;
-								<a target="_blank" href="https://github.com/shinedark/sdm">Visualizer Code</a>
+								<a target="_blank" href="https://fierce-hamlet-66749.herokuapp.com/">Visualizer </a>&nbsp;
+								<a target="_blank" href="https://github.com/shinedark/visualizer33">Visualizer Code</a>
 									<div class="textl">React App. It's meant to be used by Vj's at dj shows. Css heavy.</div>
 								</li>
 							</ul>
