--- a/index.html
+++ b/index.html
@@ -47,7 +47,7 @@
 			<section class="am">
 				
 				<section class="ma">About Me</section>
-				<p class="hard">Creative Shy Mind...</p>
+				<p class="hard">Creative Mind...</p>
 			</section>
 			<br/>
 
