--- a/index.html
+++ b/index.html
@@ -82,7 +82,7 @@
 								<div class="pic"></div>
 							<br/>
 							<div class="cont">Contact</div>
-							<div class="cont1">mide0303@gmail.com</div>
+							<div class="cont1"><a href="mailto:mide0303@gmail.com?Subject=Hello" target="_top">mide0303@gmail.com</div>
 						</div>	
 					</div>
 					<br/>
