--- a/index.html
+++ b/index.html
@@ -1,7 +1,7 @@
 <!DOCTYPE html>
 <html lang="en">
 <head>
-	<meta property="og:image:type" content="images/portfolio.png">
+	<meta property="og:image" content="https://github.com/shinedark/portfolio/blob/master/images/portfolio.png">
 	<meta property="og:url"  content="https://shinedark.github.io/portfolio/" />
 	<meta property="og:type"   content="Portfolio" />
 	<meta property="og:title"  content="Camilo Pineda" />
