--- a/index.html
+++ b/index.html
@@ -1,15 +1,12 @@
 <!DOCTYPE html>
 <html lang="en">
 <head>
-	<meta property="og:image" content="https://github.com/shinedark/portfolio/blob/master/images/portfolio.png"/>
+	<meta property="og:image" content="portfolio/images/portfolio.png"/>
 	<meta property="og:url"  content="https://shinedark.github.io/portfolio/" />
-	<meta property="og:type"   content="Portfolio" />
 	<meta property="og:title"  content="Camilo Pineda" />
 	<meta property="og:description" content="Camilo Pineda Portfolio" />
 	<meta charset="UTF-8"/>
 	<meta name="viewport" content="width=device-width, initial-scale=1, maximum-scale=1, user-scalable=no"/>
-	
-	
 	<link rel="stylesheet" type="text/css" href="https://maxcdn.bootstrapcdn.com/font-awesome/4.7.0/css/font-awesome.min.css"/>
 	<link href="https://fonts.googleapis.com/css?family=Bungee" rel="stylesheet"/>
 	<link href="https://fonts.googleapis.com/css?family=Monoton" rel="stylesheet"/>
