--- a/index.html
+++ b/index.html
@@ -5,7 +5,7 @@
 	<meta property="og:url"  content="https://shinedark.github.io/portfolio/"/>
 	<meta property="og:title"  content="Camilo Pineda" />
 	<meta property="og:description" content="Camilo Pineda Portfolio" />
-	<meta property="og:image" content="https://shinedark.github.io/portfolio/.png">
+	<meta property="og:image" content="https://shinedark.github.io/portfolio/?1.png">
 	<meta property="og:image:width" content="500" />
 	<meta property="og:image:height" content="400" />
 	<meta charset="UTF-8"/>
