--- a/index.html
+++ b/index.html
@@ -5,9 +5,11 @@
 	<meta property="og:url"  content="https://shinedark.github.io/portfolio/"/>
 	<meta property="og:title"  content="Camilo Pineda" />
 	<meta property="og:description" content="Camilo Pineda Portfolio" />
-	<meta property="og:image" content="https://shinedark.github.io/portfolio/?1.png">
+	<meta property="og:image" content="..//images/portfolio.png">
 	<meta property="og:image:width" content="500" />
 	<meta property="og:image:height" content="400" />
+	
+
 	<meta charset="UTF-8"/>
 	<meta name="viewport" content="width=device-width, initial-scale=1, maximum-scale=1, user-scalable=no"/>
 	<link rel="stylesheet" type="text/css" href="https://maxcdn.bootstrapcdn.com/font-awesome/4.7.0/css/font-awesome.min.css"/>
