--- a/index.html
+++ b/index.html
@@ -69,19 +69,19 @@
 								<div class="picsampler" ></div>
 								<a target="_blank" href="http://www.samplerdj.com/">SamplerDJ </a>&nbsp;
 								<a target="_blank" href="https://github.com/shinedark/samplerdj">SamplerDJ Code</a>
-									<div class="textl">Fun  jQuery audio sampler triggered by keyboard. Sound provided by spotify 30s previews. Includes audio effects. </div>
+									<div class="textl">Fun  jQuery audio sampler triggered by keyboard. Sound provided by spotify 30s previews. Includes audio effects.Web App </div>
 								</li>
 								<li class="al">Alog
 								<div class="picalog" ></div>
 								<a target="_blank" href="https://serene-peak-18414.herokuapp.com/">Alog </a>&nbsp;
 								<a target="_blank" href="https://github.com/shinedark/alog">Alog Code</a>
-									<div class="textl">Full Stack log App to improve communications with your doctor/therapist.</div>
+									<div class="textl">Full Stack log App to improve communications with your doctor/therapist. Web App.</div>
 								</li>
 								<li class="vi">Visualizer
 								<div class="picsvisualizer" ></div>
 								<a target="_blank" href="https://fierce-hamlet-66749.herokuapp.com/">Visualizer </a>&nbsp;
 								<a target="_blank" href="https://github.com/shinedark/visualizer33">Visualizer Code</a>
-									<div class="textl">React App. It's meant to be used by Vj's at dj shows. Css heavy.</div>
+									<div class="textl">React App. It's meant to be used by Vj's at dj shows. Css heavy. Web App.</div>
 								</li>
 							</ul>
 							<br/>
