--- a/index.html
+++ b/index.html
@@ -69,7 +69,7 @@
 								<div class="picsampler" ></div>
 								<a target="_blank" href="http://www.samplerdj.com/">SamplerDJ </a>&nbsp;
 								<a target="_blank" href="https://github.com/shinedark/samplerdj">SamplerDJ Code</a>
-									<div class="textl">Fun  jQuery audio sampler triggered by keyboard. Sound provided by spotify 30s previews. Includes audio effects.Web App </div>
+									<div class="textl">Fun  jQuery audio sampler triggered by keyboard. Sound provided by spotify 30s previews. Includes audio effects.Web App. </div>
 								</li>
 								<li class="al">Alog
 								<div class="picalog" ></div>
