--- a/index.html
+++ b/index.html
@@ -87,8 +87,14 @@
 							<br/>
 							<section class="mo"></section>
 							<h2 class="ido">What I Do</h2>
-								<p class="idoo">HTML  CSS  JS  NODE  REACT</p>
-								<div class="pic"></div>
+								<div class="scene">
+								  <div class="cube">
+								    <div class="side back">JavaScript</div>
+								    <div class="side top">React</div>
+								    <div class="side bottom">Node</div>
+								    <div class="side front">HTML5/CSS3</div>
+								  </div>
+								</div>
 							<br/>
 							<div class="cont">Contact</div>
 							<div class="cont1"><a href="mailto:mide0303@gmail.com?Subject=Hello" target="_top">mide0303@gmail.com</div>
