--- a/index.html
+++ b/index.html
@@ -89,9 +89,9 @@
 							<h2 class="ido">What I Do</h2>
 								<div class="scene">
 								  <div class="cube">
-								    <div class="side back">JavaScript</div>
+								    <div class="side back">Node</div>
 								    <div class="side top">React</div>
-								    <div class="side bottom">Node</div>
+								    <div class="side bottom">JavaScript</div>
 								    <div class="side front">HTML5/CSS3</div>
 								  </div>
 								</div>
