--- a/index.html
+++ b/index.html
@@ -91,7 +91,7 @@
 								  <div class="cube">
 								    <div class="side back">Node</div>
 								    <div class="side top">React</div>
-								    <div class="side bottom">JavaScript</div>
+								    <div class="side bottom">JS</div>
 								    <div class="side front">HTML5/CSS3</div>
 								  </div>
 								</div>
