--- a/index.html
+++ b/index.html
@@ -87,6 +87,7 @@
 							<br/>
 							<section class="mo"></section>
 							<h2 class="ido">What I Do</h2>
+								<p class="prp">HTML5 CSS3 JS NODE REACT</p>
 								<div class="scene">
 								  <div class="cube">
 								    <div class="side back">Node</div>
