--- a/index.html
+++ b/index.html
@@ -68,7 +68,7 @@
 							
 							
 							<br/>
-							<section class="mo"><a  class="box11" href="https://expo.io/@shinedark">Expo Profile</a></section>
+							<section class="mo"><a  class="box11" href="https://expo.io/@shinedark">Expo Profile Apps</a></section>
 							<h2 class="ido">What I Do</h2>
 								<p class="prp">JS NODE REACT-NATIVE Design</p>
 								<div class="scene">
