--- a/index.html
+++ b/index.html
@@ -55,7 +55,7 @@
 		
 			<section class="am">
 				<section class="ma"></section>
-				<p class="hard">Mobile 📱 Developer</p>
+				<p class="hard">📱 and 💻 Developer</p>
 			</section>
 			<div class="app">
 				<a class="box12" target="_blank" href="https://itunes.apple.com/us/app/noise-machine-sampler/id1325689054?mt=8"><h3>Noise Machine Sampler</h3></a>
