--- a/index.html
+++ b/index.html
@@ -57,9 +57,17 @@
 				<section class="ma"></section>
 				<p class="hard">📱 and 💻 Developer</p>
 			</section>
-			<div class="app">
-				<a class="box12" target="_blank" href="https://itunes.apple.com/us/app/noise-machine-sampler/id1325689054?mt=8"><h3>Noise Machine Sampler</h3></a>
-			</div>
+			<section class="stuff">
+				<div class="app">
+					<a class="box12" target="_blank" href="https://itunes.apple.com/us/app/noise-machine-sampler/id1325689054?mt=8"><h3>Noise Machine</h3><p class="infop">App Store</p></a>
+				</div>
+				<div class="app2">
+					<a class="box12" target="_blank" href="https://expo.io/@shinedark/pokesearch"><h3>Poke Search</h3><p class="infop">Expo Hosted</p></a>
+				</div>
+				<div class="app3">
+					<a class="box12" target="_blank" href="https://fierce-hamlet-66749.herokuapp.com/"><h3>Visualizer</h3><p class="infop">Full Stack Web App</p></a>
+				</div>
+			</section>
 			<br/>
 
 					<div class="projects">
@@ -68,7 +76,7 @@
 							
 							
 							<br/>
-							<section class="mo"><a  class="box11" href="https://expo.io/@shinedark">Expo Profile Apps</a></section>
+							<section class="mo"><a  class="box11" href="https://expo.io/@shinedark">More React Native Apps</a></section>
 							<h2 class="ido">What I Do</h2>
 								<p class="prp">JS NODE REACT-NATIVE Design</p>
 								<div class="scene">
