--- a/index.html
+++ b/index.html
@@ -61,6 +61,9 @@
 				<div class="app">
 					<a class="box12" target="_blank" href="https://itunes.apple.com/us/app/noise-machine-sampler/id1325689054?mt=8"><h3>Noise Machine</h3><p class="infop">App Store</p></a>
 				</div>
+				<div class="app5">
+					<a class="box12" target="_blank" href="https://itunes.apple.com/us/app/remastered/id1356588290?ls=1&mt=8"><h3>Remastered Ar</h3><p class="infop">App Store</p></a>
+				</div>
 				<div class="app2">
 					<a class="box12" target="_blank" href="https://expo.io/@shinedark/pokesearch"><h3>Poke Search</h3><p class="infop">Expo Hosted</p></a>
 				</div>
