--- a/index.html
+++ b/index.html
@@ -70,9 +70,9 @@
 				<div class="app3">
 					<a class="box12" target="_blank" href="https://fierce-hamlet-66749.herokuapp.com/"><h3>Visualizer</h3><p class="infop">Full Stack Web App</p></a>
 				</div>
-				<div class="app4">
+				<!-- <div class="app4">
 					<a class="box12" target="_blank" href="https://shinedark.github.io/samplerdj/"><h3>SamplerDj</h3><p class="infop">Front end App/Music Sampler</p></a>
-				</div>
+				</div> -->
 
 			</section>
 			<br/>
