add audio stuff

--- a/index.html
+++ b/index.html
@@ -85,7 +85,9 @@
 							<br/>
 							<section class="mo"><a  class="box11" href="https://expo.io/@shinedark">More React Native Apps</a></section>
 							<h2 class="ido">What I Do</h2>
-								<p class="prp">JS NODE REACT-NATIVE Design</p>
+								<p class="prp">JS / NODE  / REACT-NATIVE / DESIGN</p>
+								<p class="prp">AUDIO / VIDEO / PRODUCTION </p>
+
 								<div class="scene">
 								  <div class="cube">
 								    <div class="side back">Node</div>
