--- a/index.html
+++ b/index.html
@@ -74,6 +74,10 @@
 					<a class="box12" target="_blank" href="https://github.com/shinedark/managerrn"><h3>Dad's Cadddy</h3><p class="infop">Expo Hosted</p></a>
 				</div>
 
+				<div class="app6">
+					<a class="box12" target="_blank" href="https://shinedarkmusic.com/"><h3>Shine Dark Music</h3><p class="infop">Label Site</p></a>
+				</div>
+
 			</section>
 			<br/>
 
