remove more apps

--- a/index.html
+++ b/index.html
@@ -87,7 +87,7 @@
 							
 							
 							<br/>
-							<section class="mo"><a  class="box11" href="https://expo.io/@shinedark">More React Native Apps</a></section>
+							<section class="mo"><!-- <a  class="box11" href="https://expo.io/@shinedark">More React Native Apps</a> --></section>
 							<h2 class="ido">What I Do</h2>
 								<p class="prp">JS / NODE/ REACT  / REACT-NATIVE / DESIGN</p>
 								<p class="prp">AUDIO / VIDEO / PRODUCTION </p>
