--- a/index.html
+++ b/index.html
@@ -51,7 +51,7 @@
 						 <a href="https://github.com/shinedark" target='_blank'><i class="fa fa-github"></i></a>
 						</li>
 						<li class="github">
-						 <a href="assets/CamiloPinedaResume.pdf" download><i class="fa fa-id-card"></i></a>
+						 <a href="https://github.com/shinedark/portfolio/blob/master/assets/CamiloPinedaResume.pdf" download><i class="fa fa-id-card"></i></a>
 						</li>
 				    </ul>
 			</div>	
