--- a/index.html
+++ b/index.html
@@ -88,6 +88,7 @@
 
 <script src="//code.jquery.com/jquery.min.js"></script>
 <script src="js/three.min.js"></script>
+<script src="js/OrbitControls.js"></script>
 <script src="js/app.js"></script>	
 </body>
 </html>
