--- a/index.html
+++ b/index.html
@@ -38,8 +38,8 @@
 						<div class="hi">e</div>
 						<div class="hi">d</div>
 						<div class="hi">a</div>
-						<a href="#noscroll" id="mute">Sound</a>
-						<a href="#noscroll" class="apps">Apps</a>
+						<a id="mute">Sound</a>
+						<a class="apps">Apps</a>
 					</ul>
 				
 
@@ -58,7 +58,7 @@
 		</nav>
 	</header>
 	
-	<a class="start" href="#noscroll">Click Me</a>
+	<a class="start">Click Me</a>
 	<section class="work">
 		<div class="app">
 			<a class="box12" target="_blank" href="https://itunes.apple.com/us/app/noise-machine-sampler/id1325689054?mt=8"><h3>Noise Machine</h3><p class="infop">App Store</p></a>
