--- a/index.html
+++ b/index.html
@@ -66,9 +66,9 @@
 		<div class="app5">
 			<a class="box12" target="_blank" href="https://itunes.apple.com/us/app/remastered/id1356588290?ls=1&mt=8"><h3>Remastered Ar</h3><p class="infop">App Store</p></a>
 		</div>
-		<!-- <div class="app2">
-			<a class="box12" target="_blank" href="https://expo.io/@shinedark/pokesearch"><h3>Poke Search</h3><p class="infop">Expo Hosted</p></a>
-		</div> -->
+		<div class="app2">
+			<a class="box12" target="_blank" href="https://alog2.herokuapp.com/"><h3>Alog</h3><p class="infop">Node App</p></a>
+		</div>
 		<div class="app3">
 			<a class="box12" target="_blank" href="https://fierce-hamlet-66749.herokuapp.com/"><h3>Visualizer</h3><p class="infop">Full Stack Web App</p></a>
 		</div>
