--- a/index.html
+++ b/index.html
@@ -80,7 +80,9 @@
 			<a class="box12" target="_blank" href="https://shinedarkmusic.com/"><h3>Shine Dark Music</h3><p class="infop">Label Site</p></a>
 		</div>
 
+		<a class="box33" target="_blank" href="https://expo.io/@shinedark"><h2>More Apps</h2></a>
 	</section>
+
 	<video id="video" muted src="assets/videos/remastered.mp4" type='video/mp4'style="display:none" />
 
 
