--- a/index.html
+++ b/index.html
@@ -69,15 +69,15 @@
 		<div class="app2">
 			<a class="box12" target="_blank" href="https://alog2.herokuapp.com/"><h3>Alog</h3><p class="infop">Node App</p></a>
 		</div>
-		<div class="app3">
-			<a class="box12" target="_blank" href="https://fierce-hamlet-66749.herokuapp.com/"><h3>Visualizer</h3><p class="infop">Full Stack Web App</p></a>
-		</div>
+		<!-- <div class="app3">
+			<a class="box12" target="_blank" href=""><h3></h3><p class="infop">Full Stack Web App</p></a>
+		</div> -->
 		<!-- <div class="app4">
-			<a class="box12" target="_blank" href="https://github.com/shinedark/managerrn"><h3>Dad's Cadddy</h3><p class="infop">Expo Hosted</p></a>
+			<a class="box12" target="_blank" href=""><h3></h3><p class="infop">Expo Hosted</p></a>
 		</div> -->
 
 		<div class="app6">
-			<a class="box12" target="_blank" href="https://shinedarkmusic.com/"><h3>Shine Dark Music</h3><p class="infop">Label Site</p></a>
+			<a class="box12" target="_blank" href="https://shinedarkmusic.com/"><h3>Shine Dark Music</h3><p class="infop">Full Stack Web App</p></a>
 		</div>
 
 		<a class="box33" target="_blank" href="https://expo.io/@shinedark"><h2>More Apps</h2></a>
