--- a/index.html
+++ b/index.html
@@ -69,17 +69,17 @@
 		<div class="app6">
 			<a class="box12" target="_blank" href="https://shinedarkmusic.com/"><h3>Shine Dark Music</h3><p class="infop">Full Stack Web App</p></a>
 		</div>
+		<div class="app3">
+			<a class="box12" target="_blank" href="https://expo.io/@shinedark/pokesearch"><h3>Poke Search</h3><p class="infop">Expo App</p></a>
+		</div>
+		<div class="app4">
+			<a class="box12" target="_blank" href="https://expo.io/@shinedark/timerWork"><h3>Fire Clock</h3><p class="infop">Expo Hosted</p></a>
+		</div>
 		<div class="app2">
 			<a class="box12" target="_blank" href="https://alog2.herokuapp.com/"><h3>Alog</h3><p class="infop">Node App</p></a>
 		</div>
-
-		<!-- <div class="app3">
-			<a class="box12" target="_blank" href=""><h3></h3><p class="infop">Full Stack Web App</p></a>
-		</div> -->
-		<!-- <div class="app4">
-			<a class="box12" target="_blank" href=""><h3></h3><p class="infop">Expo Hosted</p></a>
-		</div> -->
-		<a class="box33" target="_blank" href="https://expo.io/@shinedark"><h2>More Apps</h2></a>
+		
+		<a class="box33" target="_blank" href="https://expo.io/@shinedark"><h2 class="expo">More Apps</h2></a>
 	</section>
 
 	<video id="video" muted src="assets/videos/remastered.mp4" type='video/mp4'style="display:none" />
