firebase app add

--- a/index.html
+++ b/index.html
@@ -73,7 +73,7 @@
 			<a class="box12" target="_blank" href="https://expo.io/@shinedark/pokesearch"><h3>Poke Search</h3><p class="infop">Expo App</p></a>
 		</div>
 		<div class="app4">
-			<a class="box12" target="_blank" href="https://expo.io/@shinedark/timerWork"><h3>Fire Clock</h3><p class="infop">Expo Hosted</p></a>
+			<a class="box12" target="_blank" href="https://expo.io/@shinedark/timerWork"><h3>Fire Clock</h3><p class="infop">Firebase App</p></a>
 		</div>
 		<div class="app2">
 			<a class="box12" target="_blank" href="https://alog2.herokuapp.com/"><h3>Alog</h3><p class="infop">Node App</p></a>
