--- a/index.html
+++ b/index.html
@@ -75,9 +75,9 @@
 		<div class="app4">
 			<a class="box12" target="_blank" href="https://expo.io/@shinedark/timerWork"><h3>Fire Clock</h3><p class="infop">Firebase App</p></a>
 		</div>
-		<div class="app2">
+		<!-- <div class="app2">
 			<a class="box12" target="_blank" href="https://alog2.herokuapp.com/"><h3>Alog</h3><p class="infop">Node App</p></a>
-		</div>
+		</div> -->
 		
 		<a class="box33" target="_blank" href="https://expo.io/@shinedark"><h2 class="expo">More Apps</h2></a>
 	</section>
