--- a/index.html
+++ b/index.html
@@ -78,7 +78,7 @@
 		<!-- <div class="app2">
 			<a class="box12" target="_blank" href="https://alog2.herokuapp.com/"><h3>Alog</h3><p class="infop">Node App</p></a>
 		</div> -->
-		
+		<a class="box33" target="_blank" href="https://blog.expo.io/expo-featured-developer-shine-dark-26ccaa63706a"><h3 class="expo">Blog Posts</h3></a>
 		<a class="box33" target="_blank" href="https://expo.io/@shinedark"><h2 class="expo">More Apps</h2></a>
 	</section>
 
