--- a/index.html
+++ b/index.html
@@ -38,8 +38,8 @@
 						<div class="hi">e</div>
 						<div class="hi">d</div>
 						<div class="hi">a</div>
-						<a id="mute">Sound</a>
-						<a class="apps">Apps</a>
+						<a id="mute">Sound ON/OFF</a>
+						<div class="apps">Apps</div>
 					</ul>
 				
 
@@ -47,10 +47,10 @@
 						<li class="twitter">
 						  <a href="https://twitter.com/ShineDarkmusic" target='_blank'><i class="fa fa-twitter"></i></a>&nbsp;
 						</li>
-						<li class="github">
+						<li class="twitter">
 						 <a href="https://github.com/shinedark" target='_blank'><i class="fa fa-github"></i></a>
 						</li>
-						<li class="github">
+						<li class="twitter">
 						 <a href="assets/CamiloPinedaResume.pdf" download ><i class="fa fa-id-card"></i></a>
 						</li>
 				    </ul>
@@ -72,13 +72,13 @@
 		<div class="app3">
 			<a class="box12" target="_blank" href="https://expo.io/@shinedark/pokesearch"><h3>Poke Search</h3><p class="infop">Expo App</p></a>
 		</div>
-		<div class="app4">
+		<!-- <div class="app4">
 			<a class="box12" target="_blank" href="https://expo.io/@shinedark/timerWork"><h3>Fire Clock</h3><p class="infop">Firebase App</p></a>
-		</div>
+		</div> -->
 		<!-- <div class="app2">
 			<a class="box12" target="_blank" href="https://alog2.herokuapp.com/"><h3>Alog</h3><p class="infop">Node App</p></a>
 		</div> -->
-		<a class="box33" target="_blank" href="https://blog.expo.io/expo-featured-developer-shine-dark-26ccaa63706a"><h3 class="expo">Blog Posts</h3></a>
+		<a class="box33" target="_blank" href="https://blog.expo.io/expo-featured-developer-shine-dark-26ccaa63706a"><h3 class="expob">Blog Posts</h3></a>
 		<a class="box33" target="_blank" href="https://expo.io/@shinedark"><h2 class="expo">More Apps</h2></a>
 	</section>
 
