--- a/index.html
+++ b/index.html
@@ -39,11 +39,10 @@
 						<div class="hi">d</div>
 						<div class="hi">a</div>
 						<a id="mute">Sound ON/OFF</a>
-						<div class="apps">Apps</div>
 					</ul>
-				
-
+						
 					<ul class="icons">
+
 						<li class="twitter">
 						  <a href="https://twitter.com/ShineDarkmusic" target='_blank'><i class="fa fa-twitter"></i></a>&nbsp;
 						</li>
@@ -54,6 +53,7 @@
 						 <a href="assets/CamiloPinedaResume.pdf" download ><i class="fa fa-id-card"></i></a>
 						</li>
 				    </ul>
+				    <div class="apps">Apps</div>
 			</div>	
 		</nav>
 	</header>
@@ -61,16 +61,16 @@
 	<a class="start">Click Me</a>
 	<section class="work">
 		<div class="app">
-			<a class="box12" target="_blank" href="https://itunes.apple.com/us/app/noise-machine-sampler/id1325689054?mt=8"><h3>Noise Machine</h3><p class="infop">App Store</p></a>
+			<a class="box12" target="_blank" href="https://itunes.apple.com/us/app/noise-machine-sampler/id1325689054?mt=8"><h3 class="appH">Noise Machine</h3><p class="infop">App Store</p></a>
 		</div>
 		<div class="app5">
-			<a class="box12" target="_blank" href="https://itunes.apple.com/us/app/remastered/id1356588290?ls=1&mt=8"><h3>Remastered Ar</h3><p class="infop">App Store</p></a>
+			<a class="box12" target="_blank" href="https://itunes.apple.com/us/app/remastered/id1356588290?ls=1&mt=8"><h3 class="appH">Remastered Ar</h3><p class="infop">App Store</p></a>
 		</div>
 		<div class="app6">
-			<a class="box12" target="_blank" href="https://shinedarkmusic.com/"><h3>Shine Dark Music</h3><p class="infop">Full Stack Web App</p></a>
+			<a class="box12" target="_blank" href="https://shinedarkmusic.com/"><h3 class="appH">Shine Dark Music</h3><p class="infop">Full Stack Web App</p></a>
 		</div>
 		<div class="app3">
-			<a class="box12" target="_blank" href="https://expo.io/@shinedark/pokesearch"><h3>Poke Search</h3><p class="infop">Expo App</p></a>
+			<a class="box12" target="_blank" href="https://expo.io/@shinedark/pokesearch"><h3 class="appH">Poke Search</h3><p class="infop">Expo App</p></a>
 		</div>
 		<!-- <div class="app4">
 			<a class="box12" target="_blank" href="https://expo.io/@shinedark/timerWork"><h3>Fire Clock</h3><p class="infop">Firebase App</p></a>
@@ -78,6 +78,7 @@
 		<!-- <div class="app2">
 			<a class="box12" target="_blank" href="https://alog2.herokuapp.com/"><h3>Alog</h3><p class="infop">Node App</p></a>
 		</div> -->
+		<br/>
 		<a class="box33" target="_blank" href="https://blog.expo.io/expo-featured-developer-shine-dark-26ccaa63706a"><h3 class="expob">Blog Posts</h3></a>
 		<a class="box33" target="_blank" href="https://expo.io/@shinedark"><h2 class="expo">More Apps</h2></a>
 	</section>
