--- a/index.html
+++ b/index.html
@@ -44,13 +44,13 @@
 					<ul class="icons">
 
 						<li class="twitter">
-						  <a href="https://twitter.com/ShineDarkmusic" target='_blank'><i class="fa fa-twitter"></i></a>&nbsp;
+						  <a href="https://twitter.com/ShineDarkmusic" target='_blank'><i class="fa fa-twitter"></i><p class="textInfo">Twitter</p></a>&nbsp;
 						</li>
 						<li class="twitter">
-						 <a href="https://github.com/shinedark" target='_blank'><i class="fa fa-github"></i></a>
+						 <a href="https://github.com/shinedark" target='_blank'><i class="fa fa-github"></i><p class="textInfo">Github</p></a>
 						</li>
 						<li class="twitter">
-						 <a href="assets/CamiloPinedaResume.pdf" download ><i class="fa fa-id-card"></i></a>
+						 <a href="assets/CamiloPinedaResume.pdf" download ><i class="fa fa-id-card"></i><p class="textInfo">Resume</p></a>
 						</li>
 				    </ul>
 				    <div class="apps">Apps</div>
