--- a/index.html
+++ b/index.html
@@ -83,7 +83,7 @@
 		<a class="box33" target="_blank" href="https://expo.io/@shinedark"><h2 class="expo">More Apps</h2></a>
 	</section>
 
-	<video id="video" muted src="assets/videos/remastered.mp4" type='video/mp4'style="display:none" />
+	<video id="video" muted src="assets/videos/remastered.mp4" type='video/mp4'style="display:none" playsinline/>
 
 
 
