--- a/index.html
+++ b/index.html
@@ -72,12 +72,11 @@
 		<div class="app3">
 			<a class="box12" target="_blank" href="https://expo.io/@shinedark/pokesearch"><h3 class="appH">Poke Search</h3><p class="infop">Expo App</p></a>
 		</div>
-		<!-- <div class="app4">
-			<a class="box12" target="_blank" href="https://expo.io/@shinedark/timerWork"><h3>Fire Clock</h3><p class="infop">Firebase App</p></a>
-		</div> -->
-		<!-- <div class="app2">
-			<a class="box12" target="_blank" href="https://alog2.herokuapp.com/"><h3>Alog</h3><p class="infop">Node App</p></a>
-		</div> -->
+		<div class="app2">
+			<a class="box12" target="_blank" href="https://alog2.herokuapp.com/"><h3 class="appH">Alog</h3><p class="infop">Node js App</p></a>
+		</div>
+		
+		
 		<br/>
 		<a class="box33" target="_blank" href="https://blog.expo.io/expo-featured-developer-shine-dark-26ccaa63706a"><h3 class="expob">Blog Posts</h3></a>
 		<a class="box33" target="_blank" href="https://expo.io/@shinedark"><h2 class="expo">More Apps</h2></a>
