--- a/index.html
+++ b/index.html
@@ -58,7 +58,8 @@
 		</nav>
 	</header>
 	
-	<a class="start">Click Me</a>
+	<h1><a href="https://portafolio-6a269.firebaseapp.com/">We Moved Click here</a></h1>
+	<!-- <a class="start">Click Me</a>
 	<section class="work">
 		<div class="app">
 			<a class="box12" target="_blank" href="https://itunes.apple.com/us/app/noise-machine-sampler/id1325689054?mt=8"><h3 class="appH">Noise Machine</h3><p class="infop">App Store</p></a>
@@ -82,14 +83,14 @@
 		<a class="box33" target="_blank" href="https://expo.io/@shinedark"><h2 class="expo">More Apps</h2></a>
 	</section>
 
-	<video id="video" muted src="assets/videos/remastered.mp4" type='video/mp4'style="display:none" playsinline/>
+	<video id="video" muted src="assets/videos/remastered.mp4" type='video/mp4'style="display:none" playsinline/> -->
 
 
 
 
-<script src="//code.jquery.com/jquery.min.js"></script>
+<!-- <script src="//code.jquery.com/jquery.min.js"></script>
 <script src="js/three.min.js"></script>
 <script src="js/OrbitControls.js"></script>
-<script src="js/app.js"></script>	
+<script src="js/app.js"></script>	 -->
 </body>
 </html>
