--- a/index.html
+++ b/index.html
@@ -4,9 +4,9 @@
 	<meta property="og:url"  content="https://shinedark.github.io/portfolio/"/>
 	<meta property="og:title"  content="Camilo Pineda" />
 	<meta property="og:description" content="Camilo Pineda Portfolio" />
-	<!-- <meta property="og:image" content="https://shinedark.github.io/portfolio/images/portfolio1.png">
+	<meta property="og:image" content="https://shinedark.github.io/portfolio/images/portfolio1.png">
 	<meta property="og:image:width" content="500" />
-	<meta property="og:image:height" content="400" /> -->
+	<meta property="og:image:height" content="400" />
 	
 
 	<meta charset="UTF-8"/>
@@ -88,9 +88,9 @@
 
 
 
-<!-- <script src="//code.jquery.com/jquery.min.js"></script>
+<script src="//code.jquery.com/jquery.min.js"></script>
 <script src="js/three.min.js"></script>
 <script src="js/OrbitControls.js"></script>
-<script src="js/app.js"></script>	 -->
+<script src="js/app.js"></script>	
 </body>
 </html>
